<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/style_fondo_degradado"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Fondo imágenes notas -->
        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/fondoImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/img_fondo_2x2"
            android:scaleType="centerCrop"
            android:alpha="0.5"/>

        <!-- Logo -->
        <LinearLayout
            android:id="@+id/TituloLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <!-- LinearLayout con ImageView y TextView -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginVertical="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <!-- ImageView Logo -->
                <ImageView
                    android:id="@+id/logoImageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/img_ico_aplicacion" />

                <!-- TextView título Harmonía+-->
                <TextView
                    android:id="@+id/titleTextView"
                    style="@style/Fuente_TimesNewRoman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="  HARMONÍA+"
                    android:textColor="@color/rosa"
                    android:textSize="45dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- TextView eslogan aplicación -->
            <TextView
                android:id="@+id/subTitleTextView"
                style="@style/Fuente_kameron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:text="@string/tu_viaje_musical_comienza_aqui"
                android:textColor="@color/morado"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TituloLogo"
            tools:ignore="MissingConstraints">

            <TextView
                style="@style/Fuente_kameron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:textColor="@color/principal"
                android:textSize="40sp" />

            <ImageView
                android:layout_width="56dp"
                android:layout_height="49dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/descripcion_de_la_imagen"
                android:src="@mipmap/img_ico_mano" />
        </LinearLayout>

        <!-- Descripción -->
        <TextView
            android:id="@+id/introduce"
            style="@style/Fuente_kameron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/introduce_el_email_y_la_contrase_a_para_iniciar_sesi_n"
            android:textColor="@color/negro"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bienvenido"
            android:alpha="0"
            tools:ignore="UnknownId" />

        <!-- EditText 1 -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/style_edittextstyle"
            android:hint="@string/e_mail"
            android:padding="16dp"
            android:textColor="@color/gris"
            android:textColorHint="@color/grisClaro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/introduce"
            android:inputType="textEmailAddress"
            tools:ignore="UnknownId" />

        <!-- EditText 2 -->
        <EditText
            android:id="@+id/editTextContrasena"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/style_edittextstyle"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/gris"
            android:textColorHint="@color/grisClaro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            android:autofillHints="" />

        <!-- Google Iniciar Sesión -->
        <TextView
            android:id="@+id/recuerdasContrasena"
            style="@style/Fuente_kameron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:clickable="true"
            android:onClick="clickNoRecuerdasLaContraseña"
            android:padding="10dp"
            android:text="@string/NoRecuerdasLaContraseñaSubrayado"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@+id/editTextContrasena"
            android:focusable="true"
            tools:ignore="RtlHardcoded" />

        <androidx.cardview.widget.CardView
            android:id="@+id/signGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:cardBackgroundColor="@color/transparente"
            app:cardElevation="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recuerdasContrasena">


            <!-- Boton Google -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button_google"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="iniciarSesionGoogle"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recuerdasContrasena"
                android:focusable="true">

                <!-- Imagen a la izquierda -->
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="Descripción de la imagen"
                    android:src="@mipmap/img_ico_google" />

                <!-- TextView a la derecha -->
                <TextView
                    android:id="@+id/textViewGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kameronregular"
                    android:layout_gravity="center_vertical"
                    android:text="Inicia sesión con Google"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/negro"
                    android:textSize="20dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Botón Iniciar Sesión -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botonIniciarSesion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:background="@drawable/style_button_degradado"
            android:onClick="irIniciarSesion"
            android:padding="16dp"
            android:soundEffectsEnabled="true"
            android:text="INICIAR SESIÓN"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signGoogle"
            tools:ignore="InvalidId" />

        <LinearLayout
            android:id="@+id/registrate"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botonIniciarSesion"
            android:alpha="0"
            tools:ignore="UnknownId">

            <TextView
                style="@style/Fuente_kameron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="¿No tienes una cuenta?"
                android:textColor="@color/negro"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/registrateTextView"
                style="@style/Fuente_kameron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="irRegistrate"
                android:text="@string/RegistrateSubrrayado"
                android:textColor="@color/morado"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/registrate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/salir"
                style="@style/Fuente_kameron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:text="Salir de la aplicación"
                android:onClick="salirApp"
                android:textColor="@color/morado"
                android:textSize="15dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>